Header Section Added

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body {
     font-family: "Open Sans", sans-serif;
 }
+/* Nav Bar related Styles */
 a{
     text-decoration: none;
     color: black;
@@ -22,6 +27,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 5%;
 }
 
 nav>ul {
@@ -41,9 +47,56 @@ nav>ul li {
     background: #FD6E0A;
     border: none;
     border-radius: 10px;
-    width: 130px;
+    width: 150px;
     height: 60px;
     color: white;
     font-weight:700;
+    font-size: 15px;
+}
+.right-header button {
     font-size: 20px;
 }
+/* Header Related Styles */
+ .header{
+    background: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+ }
+ .banner{
+    display: flex;
+    align-items: center;
+    padding: 5% 5% 0% 5%;
+    justify-content: space-between;
+    background-image: url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 60px;
+    background-position-y: center;
+ }
+ .banner img{
+    width: 500px;
+ }
+ .banner-content{
+    max-width: 500px;
+ }
+ .banner-greetings{
+    font-size: 45px;
+    font-weight: 300;
+    margin-bottom: 20px;
+ }
+ .banner-name{
+    font-size: 85px;
+    font-weight: 800;
+    margin-bottom: 20px;
+ }
+ .banner-desc{
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+ }
+ #contact-btn{
+    background: white;
+    border: 2px solid #FD6E0A;
+    color: #FD6E0A;
+ }
