--- a/Styles/style.css
+++ b/Styles/style.css
@@ -50,7 +50,7 @@ nav>ul li {
     cursor: pointer;
     background: #FD6E0A;
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
     width: 150px;
     height: 60px;
     color: white;
@@ -106,9 +106,11 @@ nav>ul li {
     font-size: 18px;
     color: #757575;
 }
-.banner-content .title-description{
+
+.banner-content .title-description {
     margin-bottom: 30px;
 }
+
 #contact-btn {
     background: white;
     border: 2px solid #FD6E0A;
@@ -118,7 +120,7 @@ nav>ul li {
 /* Main Section */
 main {
     margin: 0 auto;
-    max-width: 1340px;
+    max-width: 90vw;
 }
 
 /* About Section */
@@ -129,36 +131,134 @@ main {
     margin: 100px;
     padding: 20px;
 }
-.about-me{
-    background: white;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 20px;
-    max-width: 800px;
-    margin: 50px auto;
-}
 
 .section-title {
     font-weight: 700;
     font-size: 35px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 30px;
     margin-bottom: 30px;
 }
-.about-me > .title-description{
+
+.about-me>.title-description {
     margin-bottom: 40px;
 }
+
 .title-data {
     font-weight: 400;
     font-size: 15px;
     font-weight: 600;
 }
 
-main p {
+main > p {
     text-align: center;
     margin: 0px 40px 0px 40px;
 }
-.about-me-footer{
+
+.about-me-footer {
     display: flex;
     justify-content: space-between;
+    padding: 50px 20px;
+}
+/* What I do Section */
+.skill-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin: 50px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.08);
+    width: auto;
+    border-radius: 10px;
+    padding: 10px;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.skill:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.skill-title {
+    font-size: 18px;
+    font-weight: 600;
+    margin: 15px 0;
+}
+
+.skill-description {
+    text-align: left;
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 30px;
+}
+/* Resume Section */
+.resume-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+    padding: 0vw 5vw;
+    text-align: left;
+}
+.resume-section-title{
+    margin: 20px 0px;
+    font-size: 25px;
+}
+.resume-year{
+    color: #595959;
+    margin: 10px 0px;
+}
+.resume-container .title-description{
+    margin-bottom: 40px;
+}
+.resume-title{
+    font-size: 20px;
+    color: #1f1e1e;
+}
+.middle-btn{
+    text-align: center;
+    margin: 30px 0px;
+}
+/* footer section */
+footer{
+    background: #FFF8F3;
+}
+.footer-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 100px;
+    padding: 5vw 5vw;
+    text-align: left;
+}
+.footer-container p{
+    margin: 30px 0px;
+}
+.footer-title{
+    margin: 30px 0px;
+    font-size: 30px;
+}
+.footer-container img{
+    margin-right: 10px;
+}
+#input{
+    width: 40vw;
+    height: 8vh;
+    margin: 10px 0px;
+    border-radius: 5px;
+    border: none;
+}
+#message{
+    width: 40vw;
+    height: 30vh;
+    margin: 10px 0px;
+    border-radius: 5px;
+    border: none;
+}
+.footer-fields{
+    display: grid;
+}
+::placeholder{
+    padding-left: 20px;
 }
